--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="#home" (click)="selectedOption = 'inicio'">Inicio</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="#home" (click)="selectedOption = 'inicio'">Inicio |</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#categorias" (click)="selectedOption = 'categorias'">Categoría</a>
+      <li class="nav-item active">
+        <a class="nav-link" href="#categorias" (click)="selectedOption = 'categorias'">Categoría |</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="#productos" (click)="selectedOption = 'productos'">Productos</a>
       </li>
     </ul>
